--- a/keliling.html
+++ b/keliling.html
@@ -3,7 +3,7 @@
 <head>
     <title>Keliling Segitiga</title>
     <link rel="stylesheet" href="css/style.css">
-    <script src="/js/script.js"></script>
+    <script src="js/script.js"></script>
 </head>
 <body>
     <h1>Keliling Segitiga</h1>
