--- a/luas.html
+++ b/luas.html
@@ -3,7 +3,7 @@
 <head>
     <title>Luas Segitiga</title>
     <link rel="stylesheet" href="css/style.css">
-    <script src="/js/script.js"></script>
+    <script src="js/script.js"></script>
 </head>
 <body>
     <h1>Luas Segitiga</h1>
