--- a/keliling.html
+++ b/keliling.html
@@ -21,6 +21,6 @@
         <label for="hasil">Hasil:</label>
         <input type="text" id="hasil" name="hasil" readonly>
     </form>
-    <script src="js/script.js"></script>
+    <script src="//js/script.js"></script>
 </body>
 </html>
