refactor: revert previous commit

--- a/luas.html
+++ b/luas.html
@@ -18,6 +18,6 @@
         <label for="hasil">Hasil:</label>
         <input type="text" id="hasil" name="hasil" readonly>
     </form>
-    <script src="./js/script.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
