--- a/index.html
+++ b/index.html
@@ -5,11 +5,16 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <br>
+    <img src="/assets/logorevou.png" alt="RevoULogo" width="200">
+    <img src="/assets/logokalkulator.png" alt="KSLogo" width="200">
+    <br>
     <h1>Kalkulator Segitiga</h1>
-    <p>Selamat datang di Kalkulator Segitiga. Silahkan pilih opsi yang diinginkan.</p>
+    <p>Selamat datang di Kalkulator Segitiga, silahkan pilih opsi yang diinginkan.</p>
     <div class="tombol-container">
         <button onclick="window.location.href='luas.html'">Hitung Luas Segitiga</button>
         <button onclick="window.location.href='keliling.html'">Hitung Keliling Segitiga</button>
     </div>
+    <p>Copyright &copy2023 Zavier Ghaniy - Mini Project RevoU</p>
 </body>
 </html>
