--- a/keliling.html
+++ b/keliling.html
@@ -6,6 +6,8 @@
 </head>
 <body>
     <h1>Keliling Segitiga</h1>
+    <p>Silahkan masukan Sisi A, B, C untuk menghitung keliling segitiga</p>
+
     <form>
         <label for="sisiA">Sisi A (cm):</label>
         <input type="number" id="sisiA" name="sisiA">
@@ -20,7 +22,10 @@
         <br>
         <label for="hasil">Hasil:</label>
         <input type="text" id="hasil" name="hasil" readonly>
+        <button type="buttonreset" onclick="resetForm()">Reset</button>
+        <button type="button" onclick="window.location.href='index.html'">Kembali</button>
     </form>
+    <p>Copyright &copy2023 Zavier Ghaniy - Mini Project RevoU</p>
     <script src="js/script.js"></script>
 </body>
 </html>
