--- a/luas.html
+++ b/luas.html
@@ -6,6 +6,7 @@
 </head>
 <body>
     <h1>Luas Segitiga</h1>
+    <p>Silahkan masukan Alas dan Tinggi untuk menghitung luas segitiga</p>
     <form>
         <label for="alas">Alas (cm):</label>
         <input type="number" id="alas" name="alas">
@@ -17,7 +18,11 @@
         <br>
         <label for="hasil">Hasil:</label>
         <input type="text" id="hasil" name="hasil" readonly>
+        <br>
+        <button type="buttonreset" onclick="resetForm()">Reset</button>
+        <button type="button" onclick="window.location.href='index.html'">Kembali</button>
     </form>
+    <p>Copyright &copy2023 Zavier Ghaniy - Mini Project RevoU</p>
     <script src="js/script.js"></script>
 </body>
 </html>
