--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 </head>
 <body>
     <br>
-    <img src="/assets/logorevou.png" alt="RevoULogo" width="200">
-    <img src="/assets/logokalkulator.png" alt="KSLogo" width="200">
+    <img src="assets/logorevou.png" alt="RevoULogo" width="200">
+    <img src="assets/logokalkulator.png" alt="KSLogo" width="200">
     <br>
     <h1>Kalkulator Segitiga</h1>
     <p>Selamat datang di Kalkulator Segitiga, silahkan pilih opsi yang diinginkan.</p>
